Created contact.html and changed links on the menu.

--- a/main/template/about_me.html
+++ b/main/template/about_me.html
@@ -33,9 +33,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="/index">Home</a></li>
-							<li><a href="">About Me</a></li>
-							<li><a href="/projects">Projects</a></li>
-							<li><a href="/index#getintouch">Contact</a></li>
+							<li><a href="/index/about_me">About Me</a></li>
+							<li><a href="/index/projects">Projects</a></li>
+							<li><a href="/index/contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -44,10 +44,11 @@
 						<div class="inner">
 							<h1>About Me</h1>
 							<img style="padding: 10px;" align="right" width="375" height="402" src=" {% static 'images/IMG_7730_border.jpg' %} " alt="" />
+<!--							TODO: I wont be 24 forever, create variable to automatically calculate my age-->
 							<p>Hello! My name is Matthew Turner, I'm a 24-year-old self-taught Python programmer, and I created the site you are currently on! I designed this site, and the projects within, as a way to practice my Python coding abilities.</p>
 							<p>My journey began in June of 2019 when I took a job working at Regeneron Pharmaceutical’s Global Security Operations Command Center as a Security Analyst. After working for a few months, I noticed that there were a few responsibilities assigned to me that had the potential to be automated. At this point in my life, the only coding experience I had was some limited experience in Java from high school. After some recommendations from friends, and looking around on the internet, I decided to try installing Python and started teaching myself the language.</p>
 							<p>For the next 2 years I continued to teach myself Python. I wrote basics scripts that automated some of my repetitive responsibilities, and this opened up time for me to work on more important projects and responsibilities. Over time this brought recognition from my superiors, who asked if I could assist in managing the Security database and other Access Control related tasks using the scripts I was writing. For the rest of my time with Regeneron I assisted in their Access Control operations using the Python abilities I had taught myself. I even had a chance to pitch a project to the Director and manager of Security; I created a script that would take all Regeneron Employee Travelers flight numbers for the day and input and display it on a flight tracking program called <a href="https://flightaware.com/"> FlightAware</a>. FlightAware would then display any flights currently in the air with Regeneron travelers. The program was so well liked by the Director and Manager that they even put down money to pay for a premium FlightAware account.</p>
-							<p>Moving forward, I'm hoping to one day become a Software Developer or Data Scientist. I'm continuing to teach myself Python, which has ignited my passion for coding. Please feel free to look around the site and see the results of my efforts. If you would like to ask any questions, or just want to reach out, feel free to fill out a <a href="/index#getintouch">contact form.</a></p>
+							<p>Moving forward, I'm hoping to one day become a Software Developer or Data Scientist. I'm continuing to teach myself Python, which has ignited my passion for coding. Please feel free to look around the site and see the results of my efforts. If you would like to ask any questions, or just want to reach out, feel free to fill out a <a href="/index/contact">contact form.</a></p>
 						</div>
 					</div>
 
@@ -79,7 +80,7 @@
 								<ul class="icons">
 									<li><span class="label"><a href="https://twitter.com/Pancakes_Why"><img alt="Twitter Icon" src="{% static 'images/twitter-brands.svg' %}" width="50" height="50"></a></span></li>
 									<li><span class="label"><a href="https://github.com/austint1121"><img alt="Github Icon" src="{% static 'images/github-brands.svg' %}" width="50" height="50"></a></span></li>
-									<li><span class="label"><a href="/index#getintouch"><img alt="Email Icon" src="{% static 'images/envelope-solid.svg' %}" width="50" height="50"></a></span></li>
+									<li><span class="label"><a href="/index/contact"><img alt="Email Icon" src="{% static 'images/envelope-solid.svg' %}" width="50" height="50"></a></span></li>
 								</ul>
 							</section>
 							<ul class="copyright">
