--- a/main/template/index.html
+++ b/main/template/index.html
@@ -66,11 +66,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="/index">Home</a></li>
-							<li><a href="about_me">About Me</a></li>
-<!--							TODO: Create 'Projects' Page-->
-							<li><a href="/projects">Projects</a></li>
-<!--							TODO: Create Contact Page-->
-							<li><a href="/index#getintouch">Contact</a></li>
+							<li><a href="/index/about_me">About Me</a></li>
+<!--							TODO: Create Projects page.-->
+							<li><a href="/index/projects">Projects</a></li>
+							<li><a href="/index/contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -178,8 +177,7 @@
 								<ul class="icons">
 									<li><span class="label"><a href="https://twitter.com/Pancakes_Why"><img alt="Twitter Icon" src="{% static 'images/twitter-brands.svg' %}" width="50" height="50"></a></span></li>
 									<li><span class="label"><a href="https://github.com/austint1121"><img alt="Github Icon" src="{% static 'images/github-brands.svg' %}" width="50" height="50"></a></span></li>
-<!--									TODO: Link email icon to contact page-->
-									<li><span class="label"><a href="/index#getintouch"><img alt="Email Icon" src="{% static 'images/envelope-solid.svg' %}" width="50" height="50"></a></span></li>
+									<li><span class="label"><a href="/index/contact"><img alt="Email Icon" src="{% static 'images/envelope-solid.svg' %}" width="50" height="50"></a></span></li>
 								</ul>
 							</section>
 							<ul class="copyright">
