Added Background image to tocs tile in index.html

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -84,7 +84,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src=" {% static 'images/pic01.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/cs1.jpg' %} " alt="" />
 									</span>
 									<a href="/tocs">
 										<h2>Trails of Cold Steel Enemy Database</h2>
@@ -95,7 +95,8 @@
 										<img src=" {% static 'images/pic02.jpg' %} " alt="" />
 									</span>
 									<a href="">
-										<h2>N/A</h2>
+<!--										TODO: Change 'N/A' to "Coming soon"-->
+										<h2>Coming Soon</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -106,7 +107,7 @@
 										<img src=" {% static 'images/pic03.jpg' %} " alt="" />
 									</span>
 									<a href="">
-										<h2>N/A</h2>
+										<h2>Coming Soon</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -117,7 +118,7 @@
 										<img src=" {% static 'images/pic04.jpg' %} " alt="" />
 									</span>
 									<a href="">
-										<h2>N/A</h2>
+										<h2>Coming Soon</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -128,7 +129,7 @@
 										<img src=" {% static 'images/pic05.jpg' %} " alt="" />
 									</span>
 									<a href="">
-										<h2>N/A</h2>
+										<h2>Coming Soon</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -139,7 +140,7 @@
 										<img src=" {% static 'images/pic06.jpg' %} " alt="" />
 									</span>
 									<a href="">
-										<h2>N/A</h2>
+										<h2>Coming Soon</h2>
 										<div class="content">
 											<p></p>
 										</div>
