--- a/main/static/assets/css/main.css
+++ b/main/static/assets/css/main.css
@@ -29,7 +29,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
-
 body {
 	line-height: 1;
 }
@@ -2663,6 +2662,7 @@ input, select, textarea {
 				-webkit-transition: background-color 0.5s ease, -webkit-transform 0.5s ease;
 				-ms-transition: background-color 0.5s ease, -ms-transform 0.5s ease;
 				transition: background-color 0.5s ease, transform 0.5s ease;
+				transition: opacity 0.5s ease, transform 0.5s ease;
 				position: absolute;
 				top: 0;
 				left: 0;
@@ -2675,6 +2675,7 @@ input, select, textarea {
 				text-align: center;
 				text-decoration: none;
 				z-index: 3;
+				/* opacity: 0; */
 			}
 
 				.tiles article > a > :last-child {
@@ -2683,6 +2684,7 @@ input, select, textarea {
 
 				.tiles article > a:hover {
 					color: #ffffff !important;
+					opacity: 0
 				}
 
 				.tiles article > a h2 {
