--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -34,7 +34,7 @@
                         {% for monster in enemy %}
                         {% if places.name == monster.location.name %}
                         <tr>
-                            <td class="user-name"><a href="{{ monster.id }}"><span>{{ monster.name }}</span></a></td>
+                            <td class="user-name"><a href="{{ monster.name }}"><span>{{ monster.name }}</span></a></td>
                             <!--TODO: Create page for location view-->
                             <td class="user-title"><span>{{ monster.location }}</span></td>
                             <td class="user-location"><span>{{ monster.level }}</span></td>
