Fixed layout.html title Fixed Sepith Mass image on profile.html Changed Unbalance efficacy model from fractions to whole numbers.

--- a/tocs_database/templates/layout.html
+++ b/tocs_database/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% load static %}
 <head>
-  <title>{{title}} - Test </title>
+  <title>{{title}} - TOCS Enemy Database </title>
   <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css">
   <link rel="stylesheet" href="https://use.typekit.net/uqq2lcv.css">
