--- a/tocs_database/static/css/get.css
+++ b/tocs_database/static/css/get.css
@@ -58,7 +58,7 @@ table th {
   min-width: 141px;
   padding: 20px 15px;
   border-bottom: 1px solid #e6e6e6;
-  color: #5e6888;
+  color: #885e5e;
   font-weight: 600;
   text-align: left;
   text-transform: uppercase;
