--- a/tocs_database/static/css/header.css
+++ b/tocs_database/static/css/header.css
@@ -27,7 +27,7 @@ header {
     bottom: 0;
     left: 0;
     margin: auto;
-    color: #69b4d9;
+    color: #d96969;
     font-size: 1em;
     font-weight: bold;
     text-transform: uppercase;
