--- a/tocs_database/templates/profile.html
+++ b/tocs_database/templates/profile.html
@@ -12,7 +12,7 @@
         {{ enemy.location.name }}
         <div class="container">
             <div class="account-header">
-                <img class="user-avatar" style="height: 150px; width: 150px;" src="https://***REMOVED***.s3.amazonaws.com/static/images{{enemy.profile_pic.url}}" alt="profile">
+                <img class="user-avatar" style="height: 150px; width: 150px;" src="https://mturner-static.s3.amazonaws.com/static/images{{enemy.profile_pic.url}}" alt="profile">
                 <div class="account-details">
                     <h2 class="username">{{ enemy.name }}</h2>
                     <div class="user-personal-info">
@@ -35,6 +35,7 @@
                 <div style="flex: 33.3%; padding: 5px;">
                     <table>
                         <tbody>
+<!--                        TODO: Set up Elemental Efficacy calculations-->
                         <tr><td colspan="4" class="article-table-sub-header"><h3>Elemental Efficacy</h3></td></tr>
                             <tr><td colspan="2" style="white-space:nowrap"><span class="icon" title="Earth Element"><img alt="Earth (Sen Element).png" src="{% static 'images/Earth_Element.png' %}" decoding="async" width="25" height="25" style="margin-left: auto; margin-right: auto;vertical-align: text-top;"></span><span style="display:inline-block;width:3ch;text-align:right">100</span> <div style="background:#444444;width:100px;height:12px;border:1px solid #232323;border-radius:3px;display:inline-block;background:-webkit-linear-gradient(#3d3d3d,#525252);background:linear-gradient(#3d3d3d,#525252)"><div style="background:#e69c63;width:50px;height:12px;background:-webkit-linear-gradient(#b67f5b,#f1b17e);background:linear-gradient(#b67f5b,#f1b17e)"></div></div></td><td colspan="2" style="white-space:nowrap"></td></tr>
                             <tr><td colspan="2" style="white-space:nowrap"><span class="icon" title="Water Element"><img alt="Water (Sen Element).png" src="{% static 'images/Water_Element.png' %}" decoding="async" width="25" height="25" style="margin-left: auto; margin-right: auto;vertical-align: text-top;"></span><span style="display:inline-block;width:3ch;text-align:right">100</span> <div style="background:#444444;width:100px;height:12px;border:1px solid #232323;border-radius:3px;display:inline-block;background:-webkit-linear-gradient(#3d3d3d,#525252);background:linear-gradient(#3d3d3d,#525252)"><div style="background:#859dc5;width:50px;height:12px;background:-webkit-linear-gradient(#707e9d,#97adcd);background:linear-gradient(#707e9d,#97adcd)"></div></div></td><td colspan="2" style="white-space:nowrap"></td></tr>
