--- a/tocs_database/static/css/styles.css
+++ b/tocs_database/static/css/styles.css
@@ -32,7 +32,7 @@ p {
 }
 
 a {
-    color: #79aec8;
+    color: #d96969;
     font-weight: 500;
     text-decoration: none;
     transition: all .2s ease;
