--- a/main/template/index.html
+++ b/main/template/index.html
@@ -94,7 +94,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
 										<h2>FlightAware Input Script</h2>
@@ -105,7 +105,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src=" {% static 'images/pic03.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/pic03.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
 										<h2>Coming Soon</h2>
@@ -116,7 +116,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src=" {% static 'images/pic04.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/pic04.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
 										<h2>Coming Soon</h2>
@@ -127,7 +127,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src=" {% static 'images/pic05.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/pic05.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
 										<h2>Coming Soon</h2>
@@ -138,7 +138,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src=" {% static 'images/pic06.jpg' %} " alt="" />
+										<img width="353" height="330" src=" {% static 'images/pic06.jpg' %} " alt="" />
 									</span>
 									<a href="/index/projects">
 										<h2>Coming Soon</h2>
