Changed colors from blue to red on alternating table row.

--- a/tocs_database/static/css/users.css
+++ b/tocs_database/static/css/users.css
@@ -53,7 +53,7 @@ label {
 
 .users-table tr:nth-child(even) {
     /*background: #f6fafd;*/
-    background: #fafdfe;
+    background: #fefafa;
 }
 
 .users-table td {
