Fixed image scaling on projects.html

--- a/main/template/projects.html
+++ b/main/template/projects.html
@@ -19,7 +19,7 @@
 </article>
 <article style="margin: auto" class="style2">
   <span class="image">
-    <img src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
+    <img width="353" height="330" src=" {% static 'images/pic02_flightaware.jpg' %} " alt="" />
   </span>
   <a href="">
     <h2>FlightAware Input Script</h2>
