--- a/tocs_database/templates/profile.html
+++ b/tocs_database/templates/profile.html
@@ -8,6 +8,7 @@
 
 {% block content %}
     <div class="viewport">
+<!--        TODO: Inclide a "boss" label, and add a notes section for bosses-->
     {% include 'header.html' %}
         {{ enemy.location.name }}
         <div class="container">
