--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% load static %}
 <!--TODO: Rename classes/profiles-->
-<!--TODO: Change Color Scheme; update on aws-->
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/users.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/get.css' %}" type="text/css" />
@@ -29,6 +28,7 @@
                         </tr>
                         </thead>
                         <tbody>
+<!--                        TODO: Add spoiler text funtionality for bosses.-->
                         {% for monster in enemy %}
                         {% if places.name == monster.location.name %}
                         <tr>
