--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -39,7 +39,7 @@
                             <td class="user-location"><span>{{ monster.level }}</span></td>
                             <td colspan="2" style="white-space:nowrap"><span class="icon" title="Boss Icon">
                             {% if monster.boss %}
-                                <img alt="Critical.png" src="{% static 'images/Critical.png}" decoding="async" width="25" height="25" style="margin-left: auto; margin-right: auto;vertical-align: text-top;"></span></td>
+                                <img alt="Critical.png" src="{% static 'images/Critical.png' %}" decoding="async" width="25" height="25" style="margin-left: auto; margin-right: auto;vertical-align: text-top;"></span></td>
                             {% endif %}
                         </tr>
                         {% endif %}
