--- a/tocs_database/templates/profile.html
+++ b/tocs_database/templates/profile.html
@@ -29,7 +29,11 @@
                         <div class="user-title meta"> <span>ATS {{ enemy.ATS }}</span></div>
                     </div>
                 </div>
+                {% if enemy.boss %}
+                        <img alt="Critical.png" src="{% static 'images/Critical.png' %}" decoding="async" width="25" height="25" style="margin-left: auto ; margin-top: -3px;vertical-align: text-top;">
+                {% endif %}
             </div>
+
             <p class="user-bio">{{ enemy.bio }}</p>
             <div style="display: flex; margin-left:auto;margin-right:auto;">
                 <div style="flex: 33.3%; padding: 5px;">
