Added back button to users.html

--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -58,6 +58,9 @@
                 </div>
             {% endfor %}
         </div>
+        <p>
+        <a href="/index" class="back-to-users" style="padding-bottom: 20px;"><i class="fas fa-arrow-left"></i> <span>Back to Site</span></a>
+        </p>
     </div>
 <script>
 var coll = document.getElementsByClassName("collapsible");
